--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -16,3 +16,11 @@ ul ul, ul ol, ol ul, ol ol {
 .md-header {
     background-color: rgb(68, 84, 106);
 }
+
+.info-box {
+  border: 1px solid #007BFF; /* Border color */
+  background-color: #E7F3FF; /* Background color */
+  padding: 10px;
+  border-radius: 5px;
+  margin: 10px 0;
+}
